codespace sub repo 설정

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,9 @@
         "repositories": {
           "wbguanna/sw202407-firebase": {
             "permissions": "write-all"
+          },
+          "day2_playground": {
+            "permissions": "write-all"
           }
         }
       }
