codespace sub repo 설정2

--- a/.devcontainer/.devcontainer.json
+++ b/.devcontainer/.devcontainer.json
@@ -6,7 +6,7 @@
           "wbguanna/sw202407-firebase": {
             "permissions": "write-all"
           },
-          "day2_playground": {
+          "wbguanna/day2_playground": {
             "permissions": "write-all"
           }
         }
