--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "web-basic-basic/day02/sw202407-firebase"]
+[submodule "day02/sw202407-firebase"]
 	path = day02/sw202407-firebase
 	url = https://github.com/wbguanna/sw202407-firebase.git
