--- a/day11/server/package.json
+++ b/day11/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "jquery": "^3.7.1",
     "nodemon": "^3.1.4",
     "server": "file:"
   }
